--- a/lab-2/ll-2-badge.Rmd
+++ b/lab-2/ll-2-badge.Rmd
@@ -21,13 +21,13 @@ As a reminder, to earn a badge for these learning labs, you will have to respond
 
 For the data product, you will interpret a different type of model -- a model in a *regression* mode.
 
-So far, we have specified and interpreted a *classification* model: one predicting a dichotomous outcome (i.e., whether students have withdrawn from a course). In many cases, however, we are interested in predicting a continuous outcome (e.g., students' number of points in a course or their score on a final exam).
+So far, we have specified and interpreted a *classification* model: one predicting a dichotomous outcome (i.e., whether students pass a course). In many cases, however, we are interested in predicting a continuous outcome (e.g., students' number of points in a course or their score on a final exam).
 
 While many parts of the machine learning process are the same for a regression machine learning model, one key part that is relevant to this learning lab is different: their interpretation. The confusion matrix we created to parse the predictive strength of our classification model [does not pertain]{.underline} to regression machine learning models. Different metrics are used. For this badge activity, you will specify and interpret a regression machine learning model.
 
 The requirements are as follows:
 
--   Change your outcome to **students' final exam performance**.
+-   Change your outcome to **students' final exam performance** (note: check [the data dictionary](https://analyse.kmi.open.ac.uk/open_dataset) for a pointer!).
 
 -   Using the same data (and testing and training data sets), recipe, and workflow as you used in the case study, **change the mode** of your model from classification to regression and change the **engine** from a glm to an lm model.
 
