--- a/lab-2/ll-2-case-study.Rmd
+++ b/lab-2/ll-2-case-study.Rmd
@@ -208,12 +208,12 @@ models: a lot of the work is in the preparation and data wrangling
 stages.
 
 Let's copy the code below that we used to process the students data
-(when processing the `withdrawn` and `imd_band` variables).
+(when processing the `pass` and `imd_band` variables).
 
 ```{r}
 students <- students %>% 
-    mutate(withdrawn = ifelse(final_result == "Withdrawn", 1, 0)) %>% # creates a dummy code
-    mutate(withdrawn = as.factor(withdrawn)) # makes the variable a factor, helping later steps
+    mutate(pass = ifelse(final_result == "Pass", 1, 0)) %>% # creates a dummy code
+    mutate(pass = as.factor(pass)) # makes the variable a factor, helping later steps
 
 students <- students %>% 
     mutate(imd_band = factor(imd_band, levels = c("0-10%",
@@ -245,6 +245,24 @@ the way through the course.
 
 We're now ready to proceed to our machine learning steps!
 
+The problem we will be working on - predicting students who pass, based
+on data from the first one-third of the semester - has an analog in a
+recent paper by Ryan Baker and colleagues:
+
+In [Baker et al.
+(2020)](https://www.tandfonline.com/doi/full/10.1080/10824669.2019.1670065),
+the authors create a precision-recall (also known as sensitivity)
+graph - one that demonstrates the trade-off between optimizing these two
+statistics. Review their paper - especially the results section - to see
+how they discuss these two statistics.
+
+> Baker, R. S., Berning, A. W., Gowda, S. M., Zhang, S., & Hawn, A.
+> (2020). Predicting K-12 dropout. Journal of Education for Students
+> Placed at Risk (JESPAR), 25(1), 28-54.
+
+Please review this paper before proceeding, focusing on how they
+describe
+
 ## Step 1. Split data
 
 This is identical to what we did in the first learning lab, using the
@@ -254,7 +272,10 @@ we'll use later.
 ```{r}
 set.seed(20230712)
 
-train_test_split <- initial_split(students_and_assessments, prop = .80)
+students_and_assessments <- students_and_assessments %>% 
+    drop_na(mean_weighted_score)
+
+train_test_split <- initial_split(students_and_assessments, prop = .50, strata = "pass")
 data_train <- training(train_test_split)
 data_test <- testing(train_test_split)
 ```
@@ -263,18 +284,18 @@ data_test <- testing(train_test_split)
 
 We'll also specify the recipe, adding our `mean_weighted_score` variable
 we calculated above as well as variables we used in LL1 (case study and
-badge). Note how we dummy code three variables using `step_dummy()`
+badge). Note how we dummy code two variables using `step_dummy()`
 (described further in the first learning lab).
 
 ```{r}
-my_rec <- recipe(withdrawn ~ disability + imd_band +
-                     date_registration + 
-                     gender + highest_education + 
-                     mean_weighted_score, 
-                 data = data_train) %>% 
-    step_dummy(disability) %>% 
-    step_dummy(gender) %>% 
-    step_dummy(highest_education)
+my_rec <- recipe(pass ~ disability +
+                 date_registration + 
+                 gender +
+                 mean_weighted_score, 
+             data = data_train) %>% 
+step_dummy(disability) %>% 
+step_dummy(gender) %>% 
+
 ```
 
 ## Step 3: Specify the model and workflow
@@ -285,8 +306,8 @@ These steps are also the same as in LL1.
 # specify model
 my_mod <-
     logistic_reg() %>% 
-    set_engine("glm") %>%
-    set_mode("classification")
+    set_engine("glm") %>% # generalized linear model
+    set_mode("classification") # since we are predicting a dichotomous outcome, specify classification; for a number, specify regression
 
 # specify workflow
 my_wf <-
@@ -311,7 +332,7 @@ but which accounts for chance agreement.
 To do so, we have to specify *which* metrics we want to use using the
 `metric_set()` function (see all of the available options
 [here](https://yardstick.tidymodels.org/articles/metric-types.html)).
-Please specify six metrics in the metric set -- accuracy, sensitivty,
+Please specify six metrics in the metric set -- accuracy, sensitivity,
 specificity, ppv (recall), npv, and kappa. Assign the name
 `class_metrics` to the output of your use of the `metric_set()`
 function.
@@ -323,7 +344,7 @@ class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) #
 ```
 
 Then, please use `last_fit`, looking to how we did this in the last
-learning lab for a guide on how to specify the arguments. To the
+learning lab for a guide on how to specify the argument nts. To the
 arguments, add `metrics = class_metrics`.
 
 ```{r}
@@ -334,96 +355,115 @@ We're now ready to move on to interpreting the accuracy of our model.
 
 ## Step 5: Interpret accuracy
 
-Let's start with accuracy and a simple confusion matrix.
+### A confusion matrix and true and false positives and negatives
+
+Let's start with a simple confusion matrix. The confusion matrix is a 2
+x 2 table with values (cells in the table) representing one of four
+conditions, elaborated below. You'll fill in the last two columns in a
+few moments.
+
+|      Statistic      |       How to Find       |                                          Interpretation                                          | Value |  \%  |
+|:-------------------:|:-----------:|:------------------------:|:-----:|:-----:|
+| True positive (TP)  | Truth: 1, Prediction: 1 |    Proportion of the population that is affected by a condition and correctly tested positive    | 2443  | 19.8 |
+| True negative (TN)  | Truth: 0, Prediction: 0 |  Proportion of the population that is not affected by a condition and correctly tested negative  | 4536  | 36.8 |
+| False positive (FP) | Truth: 0, Prediction: 1 | Proportion of the population that is not affected by a condition and incorrectly tested positive | 2070  | 16.8 |
+| False negative (FN) | Truth: 1, Prediction: 0 |  Proportion of the population that is affected by a condition and incorrectly tested positive.   | 3269  | 26.5 |
+
+To create a confusion matrix, run `collect_predictions()`, which does
+what it suggests - it gathers together the model's test set predictions.
+Pass the `last_fit` object to this function below.
+
+#### [Your Turn]{style="color: green;"} ⤵
 
 ```{r}
-collect_predictions(final_fit) %>% View()
+collect_predictions(final_fit)
+```
 
+Take a look at the columns. You'll need to provide the predictions
+(created with `collect_predictions()`) and then pipe that to
+`conf_mat()`, to which you provide the names of a) the predictions and
+b) the known values for the test set. Some code to get you started is
+below.
+
+```{r}
 collect_predictions(final_fit) %>% 
-    conf_mat(.pred_class, withdrawn)
+    conf_mat(.pred_class, pass)
 ```
 
-```{r}
-collect_metrics(final_fit)
-```
+You should see a confusion matrix output. If so, nice work! Please fill
+in the **Value** and **Percentage** columns in the table above (with TP,
+TN, FP, and FN), entering the appropriate values and then converting
+those into a percentage based on the total number of data points in the
+test data set. The accuracy can be interpreted as the sum of the true
+positive and true negative percentages. So, what's the accuracy? Add
+that below as a percentage.
 
-The table below elaborates on the meaning of these statistics:
+-   **Accuracy:** 56.6%
 
-| Statistic           | Interpretation                                                                                   |
-|--------------------|----------------------------------------------------|
-| Accuracy            | Proportion of the population that is true positive *or* true negative                            |
-| True positive (TP)  | Proportion of the population that is affected by a condition and correctly tested positive       |
-| True negative (TN)  | Proportion of the population that is not affected by a condition and correctly tested negative   |
-| False positive (FP) | Proportion of the population that is not affected by a condition and incorrectly tested positive |
-| False negative (FN) | Proportion of the population that is affected by a condition and incorrectly tested positive.    |
+### Other measures of predictive accuracy
 
 Here's where things get interesting: There are other statistics that
-have different denominators.
+have different denominators. Recall from the overview presentation that
+we can slice and dice the confusion matrix to calculate statistics that
+give us insights into the predictive utility of the model. Based on the
+above **Values** for TP, TN, FP, and FN you interpreted a few moments
+ago, add the **Statistic Values** for sensitivity, specificity,
+precision, and negative predictive value below to three decimal points.
 
-Recall from the overview presentation that we can slice and dice the
-confusion matrix to calculate statistics that give us insights into the
-predictive utility of the model.
+#### [Your Turn]{style="color: green;"} ⤵
 
-|                                               |                |                                                                                                                                |                                                                                    |           |
-|---------------|---------------|---------------|---------------|---------------|
-| **Statistic**                                 | **Equation**   | **Interpretation**                                                                                                             | **Question Answered**                                                              | **Value** |
-| **Sensitivity** (AKA recall)                  | TP / (TP + FN) | Proportion of those who are affected by a condition and correctly tested positive                                              | Out of all the actual positives, how many did we correctly predict?                |           |
-| **Specificity**                               | TN / (FP + TN) | Proportion of those who are not affected by a condition and correctly tested negative;                                         | Out of all the actual negatives, how many did we correctly predict?                |           |
-| **Precision** (AKA Positive Predictive Value) | TP / (TP + FP) | Proportion of those who tested positive who are affected by a condition                                                        | Out of all the instances we predicted as positive, how many are actually positive? |           |
-| **Negative Predictive Value**                 | TN / (TN + FN) | Proportion of those who tested positive who are not affected by a condition; *the probability that a negative test is correct* | Out of all the instances we predicted as negative, how many are actually negative? |           |
+|                                               |                |                                                                                                                                |                                                                                    |                      |
+|:-------------:|:-------------:|:-------------:|:-------------:|:-------------:|
+|                 **Statistic**                 |  **Equation**  |                                                       **Interpretation**                                                       |                               **Question Answered**                                | **Statistic Values** |
+|         **Sensitivity** (AKA recall)          | TP / (TP + FN) |                       Proportion of those who are affected by a condition and correctly tested positive                        |        Out of all the actual positives, how many did we correctly predict?         |         .428         |
+|                **Specificity**                | TN / (FP + TN) |                     Proportion of those who are not affected by a condition and correctly tested negative;                     |        Out of all the actual negatives, how many did we correctly predict?         |         .687         |
+| **Precision** (AKA Positive Predictive Value) | TP / (TP + FP) |                            Proportion of those who tested positive who are affected by a condition                             | Out of all the instances we predicted as positive, how many are actually positive? |         .581         |
+|         **Negative Predictive Value**         | TN / (TN + FN) | Proportion of those who tested positive who are not affected by a condition; *the probability that a negative test is correct* | Out of all the instances we predicted as negative, how many are actually negative? |         .541         |
 
 So, what does this hard-won by output tell us? Let's interpret each
 statistic carefully in the table below. Please add the value and provide
 a *substantive interpretation*. One is provided to get you started.
 
-|                                           |           |                                                                                                                            |
-|----------------------|----------------------|----------------------------|
-| **Statistic**                             | **Value** | **Substantive Interpretation**                                                                                             |
-| Accuracy                                  |           |                                                                                                                            |
-| Sensitivity (AKA recall)                  | .997      | The model is remarkably good at doing this; practically all of the students who withdrew were correctly predicted as such. |
-| Specificity                               |           |                                                                                                                            |
-| Precision (AKA Positive Predictive Value) |           |                                                                                                                            |
-| Negative Predictive Value                 |           |                                                                                                                            |
-| Cohen's Kappa                             |           |                                                                                                                            |
+#### [Your Turn]{style="color: green;"} ⤵
+
+|                                           |                                                                                                                                             |
+|----------------------|----------------------------|
+| **Statistic**                             | **Substantive Interpretation**                                                                                                              |
+| Accuracy                                  |                                                                                                                                             |
+| Sensitivity (AKA recall)                  | The model correctly predicts about 2/3 of students who do not pass correctly (as not passing). This is pretty good, but it could be better. |
+| Specificity                               |                                                                                                                                             |
+| Precision (AKA Positive Predictive Value) |                                                                                                                                             |
+| Negative Predictive Value                 |                                                                                                                                             |
 
 This process might suggest to you how a "good" model isn't necessarily
 one that is the most accurate, but instead is one that has good values
 for statistics that matter given our particular question and context.
 
-In [Baker et al.
-(2020)](https://www.tandfonline.com/doi/full/10.1080/10824669.2019.1670065),
-the authors create a precision-recall graph - one that demonstrates the
-trade-off between optimizing these two statistics. Review their paper -
-especially the results section - to see the graph they present.
+Recall that Baker and colleagues sought to balance between precision and
+recall (specificity). Please briefly discuss how well our model does
+this; is it better suited to correctly identifying "positive" pass cases
+(sensitivity) or "negatively" identifying students who do not pass
+(specificity)?
 
-> Baker, R. S., Berning, A. W., Gowda, S. M., Zhang, S., & Hawn, A.
-> (2020). Predicting K-12 dropout. Journal of Education for Students
-> Placed at Risk (JESPAR), 25(1), 28-54.
+-   
 
-We can create a comparable graph for our model, which can help us
-understand how we can consider the trade-off between a model that
-optimizes between correctly predicting actual students who will withdraw
-(recall, or sensitivity) and not falsely predicting as students who will
-withdraw those who do not (precision). We'll have to make the
-predictions and bind them to our data set.
+### Quickly calculating metric
+
+After all of this work, we *can* calculate the above much more easily
+given how we setup our metrics (using `metric_set()` earlier. Below, use
+`collect_metrics()` with the `final_fit` object, noting that in addition
+to the four metrics we calculated manually just a few moments ago, we
+are also provided with the accuracy and Cohen's Kappa values.
+
+#### [Your Turn]{style="color: green;"} ⤵
 
 ```{r}
-predictions <- fitted_model %>%
-  predict(new_data = data_test, type = "prob") # make predictions with our testing data using predict()
 
-data_for_pr_curve <- data_test %>% 
-    bind_cols(predictions) # combine the predictions with the data_test data, which includes the known withdrawal status
-
-pr_curve(data_for_pr_curve, withdrawn, .pred_1) %>% 
-  # filter(.threshold < 1.01) %>% 
-  ggplot(aes(x = recall, y = precision, color = .threshold)) +
-  geom_path() +
-  coord_equal() +
-  theme_bw() +
-    scale_color_gradient(low = "white", high = "black")
 ```
 
-Let's focus on
+Having invested in understanding the terminology of machine learning
+metrics, we'll use this "shortcut" (using `collect_metrics()` going
+forward.
 
 ### 🧶 Knit & Check ✅
 
