minor edits in advance of starting on ll3

--- a/lab-3/ll-3-case-study.Rmd
+++ b/lab-3/ll-3-case-study.Rmd
@@ -19,6 +19,8 @@ bibliography: lit/references.bib
 knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
 ```
 
+## Background
+
 1.  We use a very different data set, on from *online science classes*
     that involves a variety of variables types
 2.  We focus on *feature engineering*, a key step in which we prepare
